--- a/styles.css
+++ b/styles.css
@@ -6,28 +6,44 @@ body {
     margin: 0;
     font-family: 'Roboto', arial;
 }
-.container {
+
+
+.buttonContainer {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0 15px 0;
+    align-content: center;
+}
+
+.gridButton {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 25px;
+}
+
+.gridButton input {
+    height: 50px;
+    width: 150px;
+    border-color: rgb(36, 34, 34);
+    color: rgb(36, 34, 34);
+    border-radius: 20px;
+    background-color: aqua;
+    font-weight: bolder;
+}
+.gridContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.gridButton {
-    margin: 2.5% 2.5% 0% 2.5%;
-}
-
-.gridContainer {
-    display: flex;
-    flex-wrap: wrap;
     width: 480px;
     height: 480px;
     border-style: solid;
-    margin: 5% 5% 5% 5%;
+    margin: 0 auto 0 auto;
     border-radius: 15px;
     border-width: 10px;
 }
 .grid {
-    flex: 1 1 6%;
+    padding: 0px;
     background-color: rgb(36, 34, 34);
 }
